# Cosmoria

./: CMakeLists.txt  README.md  main.c
src/: main.c
src/config/: defines.h
src/engine/: createEngine.c  createEngine.h  engineCore.c  engineCore.h
src/engine/VulkanAPI/: swapChain.c  swapChain.h  vulkanDevice.c  vulkanDevice.h
src/engine/window/: window.c  window.h  windowDefines.h
src/util/: defines.h  timer.h
src/util/logger/: logger.c  logger.h
src/util/math/: math.h
